assets/css/styles.css
:root {
  --primary-color: #aa2342ff; 
  --secondary-color: #bd546c;
  --color-hover: #aa2342e5;
  --text-color: rgb(25, 26, 26);
  --text-color-secondary: #ffffff;
  --background-color: #ffffff;
  --background-color-secondary: #e3e3e3ff;
  --color-border: #aa2342;
}

@font-face {
  font-family: 'Jost';
  src: url('../fonts/Jost-VariableFont_wght.ttf');
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: 'Jost';
  src: url('../fonts/Jost-Italic-VariableFont_wght.ttf');
  font-weight: 100 900;
  font-style: italic;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  background-color: var(--background-color);
  color: var(--text-color);
  font-family: 'Jost', sans-serif;
  font-weight: 400;
  padding: 160px 0 0 0;
}

/*** Global ***/
h1 {
  font-size: 3rem;
  font-weight: 600;
  line-height: 1.2;
}

h1 span {
  display: block;
}

h2 {
  font-size: 2rem;
  font-weight: 400;
  color: var(--primary-color);
}

h3 {
  font-size: 1.5rem;
}

h3 span {
  display: block;
}

/*** Nav ***/
nav {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 160px;
  width: 100%;
  overflow: hidden;
  position: fixed;
  top: 0;
  background-color: var(--background-color);
  transition: all 0.3s ease-in-out;
  z-index: 9;
}

nav .logo img {
  transition: all 0.3s ease-in-out;  
}

nav input[type="checkbox"] {
  display: none;
}

nav label {
  display: none;
}

nav .nav-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
  max-width: 1190px;
  width: 100%;
}

nav ul {
  display: flex;
  gap: 20px;
  list-style: none;
  margin: 0;
  padding: 0;
  transition: all 0.3s ease-in-out;
}

nav ul li a {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0px 23px;
  border-radius: 31px;
  background-color: var(--secondary-color);
  color: var(--text-color-secondary);
  font-size: 22px;
  text-align: center;
  text-decoration: none;
  border: none;
  cursor: pointer;
  height: 56px;
}

nav ul li a:hover {
  background-color: var(--color-hover);
}

.active {
  background-color: var(--primary-color);
}

nav.scrolled {
  height: 80px;
  background-color: transparent;
}

/* 
  crear un before del nav.scrolled identico al nav sin contenido pero con un
  background #ffffffcc y un backfilter blur(10px) para que se vea mas transparente
*/
nav.scrolled::before {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 80px;
  background-color: #ffffffcc;
  backdrop-filter: blur(7px);
}

nav.scrolled label {
  transform: scale(0.8);
}

nav.scrolled .logo img {
  transform: scale(0.8);
}

/*** content ***/
.content {
  width: 100%;
  max-width: 1050px;
  display: flex;
  flex-direction: column;
}

/*** Header ***/
header {
  background-image: url("../img/firma.jpg");
  background-size: cover;
  background-position: center;
  height: 500px;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  width: 100%;
  position: relative;
  text-transform: uppercase;
}

header::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: radial-gradient(circle, 
    #ffffff00 10%,    /* Transparente al inicio */
    #f7ecef11 30%,    /* Color suave en el primer tercio */
    #be5c7393 60%,    /* Color medio en el segundo tercio */
    #a72242cc 90%     /* Color oscuro en el borde final */
  );
  z-index: 1;
}

header h2 {
  color: var(--text-color);
  font-size: 1.7rem;
}

header .content {
  padding: 0 0 60px 0;
  z-index: 2;
}

/*** Main ***/
main {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

main .content section {
  width: 100%;
  margin: 100px 0 0 0;
}

main .content section p span {
  font-weight: bold;
}

/*** Abogado en Murcia ***/
main .content section:first-of-type {
  display: flex;
  flex-direction: row;
  gap: 50px;
}

main .content section:first-of-type .image {
  width: 50%;
  max-height: 386px;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  background-image: url(../img/balanza_3.jpg);
  background-size: cover;
  background-repeat: no-repeat;
}

main .content section:first-of-type .text {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  width: 50%;
}

main .content section:first-of-type .text p {
  position: relative;
}

main .content section:first-of-type .text p:not(:last-of-type)::after {
  content: "";
  display: block;
  width: 102px;
  height: 2px;
  background-color: var(--primary-color);
  margin: 25px auto;
}

/*** Featured services ***/
main .content section .services-list {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 50px;
}

main .content section .services-list .service {
  border: 1px solid var(--color-border);
  border-radius: 75px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 147px;
  width: 306px;
  padding: 44px;
  text-align: center;
}

/* Responsive */
/* 1230px */
@media screen and (max-width: 1230px) {
  nav {
    padding: 0 20px;
  }
}

/* 1070px */
@media screen and (max-width: 1070px) {
  .content {
    margin: 0 20px 0 20px;
  }

  main .content {
    width: auto;
  }

  main .content section:first-of-type .image {
    max-height: none;
  }
  
}

/* 1024px and Navbar */
@media screen and (max-width: 1024px) {
  nav.scrolled ul {
    top: 80px;
    height: calc(100vh - 80px);
  }

  #menu-toggle:checked ~ ul {
    right: 0;
  }

  #menu-toggle:checked ~ ul li a {
    opacity: 1;
    transform: translateX(0);
  }

  nav label {
    display: block;
    position: relative;
    width: 50px;
    height: 50px;
    cursor: pointer;
  }

  nav label span {
    position: absolute;
    height: 4px;
    width: 100%;
    background: var(--primary-color);
    border-radius: 9px;
    opacity: 1;
    transform: rotate(0deg);
    transition: all 0.3s ease-in-out;
  }

  nav label span:nth-child(1) {
    top: 0;
  }

  nav label span:nth-child(2) {
    top: calc(50% - 2px);
  }

  nav label span:nth-child(3) {
    bottom: 0;
  }

  nav input[type="checkbox"]:checked ~ label span:nth-child(1) {
    transform: rotate(45deg);
    top: 23px;
  }

  nav input[type="checkbox"]:checked ~ label span:nth-child(2) {
    opacity: 0;
  }

  nav input[type="checkbox"]:checked ~ label span:nth-child(3) {
    transform: rotate(-45deg);
    bottom: 23px;
  }

  nav ul {
    position: fixed;
    width: 100%;
    height: calc(100vh - 160px);
    right: -100vw;
    top: 160px;
    background: var(--primary-color);
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-end;
    padding: 50px 0;
    gap: 3px;
    transition: all 0.3s ease-in-out;
  }

  nav ul li,
  nav ul li a {
    width: 100%;
    border-radius: 0;
    background: var(--primary-color);
    height: 60px;
    font-size: larger;
    display: flex;
    justify-content: flex-end;
    align-items: center;
  }
  
  nav ul li a {
    transition: all 0.8s ease-in-out;
    opacity: 0;
  }
}

/* 900px */
@media screen and (max-width: 900px) {
  main .content section:first-of-type {
    flex-direction: column-reverse;
  }

  main .content section:first-of-type .text {
    width: 100%;
  }

  main .content section:first-of-type .image {
    min-height: clamp(312px, 86vh, 756px);
    width: 100%;
  }
}

/* 820px */
@media screen and (max-width: 820px) {
  main .content section .services-list:last-of-type {
    margin-top: 40px;
  }
}

/* 768px */
@media screen and (max-width: 768px) {
  main .content section:first-of-type .image {
    min-height: clamp(312px, 72vh, 756px);
    width: 100%;
  }

  main .content section .services-list {
    flex-direction: column;
    gap: 20px;
  }

  main .content section .services-list:last-of-type {
    margin-top: 20px;
  }

  main .content section .services-list .service {
    width: 100%;
    padding: 20px;
  }
}

/* 650px */
@media screen and (max-width: 650px) {
  main .content section:first-of-type .image {
    min-height: clamp(312px, 62vh, 756px);
  }
}

/* 540px */
@media screen and (max-width: 540px) {
  main .content section:first-of-type .image {
    min-height: clamp(312px, 50vh, 756px);
  }
}

